k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-service
  labels:
    app: heart-disease-api
spec:
  type: LoadBalancer
  selector:
    app: heart-disease-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
